--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+* {
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  font-family: monospace;
+  border-radius: 5px;
+  -webkit-transition: width 2s;
+  transition: width 2s;
+}
+
+html {
+  height: 100%;
+  background: white;
+  background: radial-gradient(circle, #fff 20%, #ccc);
+  background-size: cover;
+}
+
 .App {
   text-align: center;
 }
@@ -15,7 +34,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
